# elemental-chat

./: .gitignore  Cargo.toml  Makefile  README.md  config.nix  default.nix  dna.yaml  gh-release.sh  happ.yaml  holochain_version.nix  nixpkgs.nix  release-builds.sh  version-manager.json  xx
.github/workflows/: main.yml
crates/joining_code/: Cargo.toml
crates/joining_code/src/: init.rs  joining_code.rs  lib.rs  props.rs  validation.rs
crates/test_mock_hdk/: Cargo.toml
crates/test_mock_hdk/tests/: time_batching.rs
e2e_test/: package-lock.json  package.json
e2e_test/src/: element_chat.ts  index.ts
elemental-chat.dna.workdir/: dna.json  dna.yaml
nix/: sources.json
tests/: hc-repro-output.txt  hc-repro.js  package-lock.json  package.json  tsconfig.json  unfortunate-output.txt
tests/src/: basic-chatting.ts  batching.ts  chat-signals.ts  chat-stats.ts  common.ts  elemental-chat.ts  index.ts  installAgents.ts  membrane-proof.ts  multi-chunk.ts  pagination.ts  profile.ts  transient-nodes.ts  unique-registration-code.ts  utils.ts
tests/src/behaviors/: README.md  config.ts  index.ts  memproofs.js  trycp-addresses.ts  tx-per-minute.ts  tx-per-second.ts
zomes/chat/: Cargo.toml
zomes/chat/src/: batching_helper.rs  entries.rs  error.rs  lib.rs  pagination_helper.rs  utils.rs  validate.rs  validation.rs
zomes/chat/src/entries/: channel.rs  channel_message.rs  message.rs  mod.rs
zomes/chat/src/entries/channel/: handlers.rs  mod.rs
zomes/chat/src/entries/message/: handlers.rs  mod.rs
zomes/chat/tests/: basic_chatting.rs  batching.proptest-regressions  batching.rs  behavior.rs  chatting_page.rs  sweetest_example.rs  sweettest_example.rs  time_batching.rs
zomes/chat_integrity/: Cargo.toml
zomes/chat_integrity/src/: entries.rs  lib.rs  validation.rs
zomes/membrane_manager/: Cargo.toml
zomes/membrane_manager/src/: lib.rs
zomes/membrane_manager_integrity/: Cargo.toml
zomes/membrane_manager_integrity/src/: lib.rs
zomes/profile/: Cargo.toml
zomes/profile/src/: lib.rs
zomes/profile_integrity/: Cargo.toml
zomes/profile_integrity/src/: lib.rs
