[workspace]
resolver = "2"
members = [
  "zomes/chat",
  "zomes/profile",
  "zomes/membrane_manager",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
# hdk = {path = "../chain/crates/hdk"}
hdk = {git ="https://github.com/holochain/holochain", branch = "hdk-ergonomics", package = "hdk"}
# hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "v0.0.107", package = "hc_utils"}
# holo_hash = {git = "https://github.com/holochain/holochain", rev = "a1206a694fe3b521440fe633db99a50b8255c1b2", package = "holo_hash"}
