[package]
name = "hc_joining_code"
version = "0.0.1-alpha.1"
authors = [ "michael.dougherty@holo.host", "philip.beadle@holo.host", "david.meister@holo.host, tom.gowan@holo.host" ]
edition = "2018"

[lib]
name = "hc_joining_code"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = "0.0.101"
serde = "1.0.123"
derive_more = "0.99"
