[package]
name = "hc_joining_code"
version = "0.0.1-alpha.1"
authors = [ "michael.dougherty@holo.host", "philip.beadle@holo.host", "david.meister@holo.host, tom.gowan@holo.host" ]
edition = "2018"

[lib]
name = "hc_joining_code"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = {git = "https://github.com/holochain/holochain", rev = "363af6d8af8d18e4616f6aa56ad4d1f0fabaafb7", package = "hdk", version = "0.0.101-alpha.0"}
serde = "1.0.123"
derive_more = "0.99"
