[package]
name = "hc_joining_code"
version = "0.0.1-alpha.1"
authors = [ "michael.dougherty@holo.host", "philip.beadle@holo.host", "david.meister@holo.host, tom.gowan@holo.host" ]
edition = "2018"

[lib]
name = "hc_joining_code"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = "=0.0.138"
serde = "=1.0.139"
derive_more = "0.99"
holo_hash = {git = "https://github.com/holochain/holochain.git", rev = "f7ff004c0925cf19a52d90ff7f8df8ec6d8f170a", package = "holo_hash"}
