[package]
name = "elemental-chat"
authors = ["michael.dougherty@holo.host", "philip.beadle@holo.host", "david.meister@holo.host, tom.gowan@holo.host"]
version = "0.2.2"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = {version = "0.4.19", features = ['alloc', 'std']}
derive_more = "0.99"
hdk = { version = "=0.0.138", features = ["encoding"] }
serde = "1.0"
thiserror = "1.0"
hc_utils = "=0.0.138-patch1"
uuid = "0.8.2"
getrandom = { version = "0.2", features = ["js"] }
is_sorted = "0.1.1"
chat_integrity = {path = '../chat_integrity'}
# membrane_manager_utils = {git = "https://github.com/holochain/hc-zome-lib", branch = "v0.0.138", package = "membrane_manager_utils"}

# [dev-dependencies]
# holochain = "=0.0.139"
# holochain_types = "=0.0.31"
# futures = "0.3.1"
# nanoid = "0.4.0"
# observability = "0.1.2"
# stream-cancel = "0.8.0"
# tokio = {version = "1.3", features = ["full"]}
# test-case = "1.2.1"
# matches = {version = "0.1.8", optional = false }
# holochain_test_wasm_common = { version = "0.0.26", optional = false  }
# unwrap_to = { version = "0.1.0", optional = false }
# arbitrary = { version = "1.0", features = ["derive"] }
# proptest = "1.0.0"
