[package]
name = "chat"
authors = ["michael.dougherty@holo.host", "philip.beadle@holo.host", "david.meister@holo.host, tom.gowan@holo.host"]
version = "0.2.2"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid = "0.8.2"
derive_more = "0.99"
serde = "1.0"
thiserror = "1.0"
chrono = "0.4.6"
hdk = "=0.0.138"
hc_utils = "=0.0.138-patch1"
chat_integrity = {path = '../chat_integrity'}
