[package]
name = "profile"
version = "0.2.0"
authors = ["zo-el <joel.ulahanna@holo.host>"]
edition = "2021"

[lib]
name = "profile"
crate-type = [ "cdylib", "rlib" ]
doctest = false

[dependencies]
profile = {git = "https://github.com/holochain/hc-zome-lib", rev = "e9e874901499e2ce154b884b315f58c18207d845", package = "membrane_manager_utils"}
